[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Interactables/Assets/KeyDoor2.svg" type="Texture" id=1]
[ext_resource path="res://Assets/Interactables/Assets/Key2.svg" type="Texture" id=2]
[ext_resource path="res://Assets/Interactables/KeyNDoor.gd" type="Script" id=3]
[ext_resource path="res://Assets/Interactables/Sounds/Nuhuh.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Interactables/Sounds/Open.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Interactables/Sounds/Checkpoint.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=3]
resource_name = "Float"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KeySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeySprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ),
"transitions": PoolRealArray( -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2 ),
"update": 0,
"values": [ 5.0, -5.0, 5.0, -5.0, 5.0, -5.0, 5.0, -5.0, 5.0, -5.0, 5.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KeySprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Pickup"
tracks/0/type = "value"
tracks/0/path = NodePath("KeySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( -2, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -30 ), Vector2( 0, -30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeySprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 0.5, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.5, 0.5 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KeySprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("KeySprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.0 ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 58.1378

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27, 64 )

[node name="KeyNDoor" type="Node2D"]
script = ExtResource( 3 )

[node name="Key" type="Position2D" parent="."]
position = Vector2( 107, 0 )

[node name="KeySprite" type="Sprite" parent="Key"]
position = Vector2( 0, -30 )
rotation = 0.0872665
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )

[node name="KeyAnims" type="AnimationPlayer" parent="Key/KeySprite"]
root_node = NodePath("../..")
anims/Float = SubResource( 3 )
anims/Pickup = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="TriggerSound" type="AudioStreamPlayer" parent="Key/KeySprite"]
stream = ExtResource( 6 )

[node name="PlayerDetect" type="Area2D" parent="Key"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key/PlayerDetect"]
shape = SubResource( 1 )

[node name="Door" type="Position2D" parent="."]

[node name="DoorSprite" type="Sprite" parent="Door"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Nuhuh" type="AudioStreamPlayer" parent="Door/DoorSprite"]
stream = ExtResource( 4 )
volume_db = -7.429

[node name="Open" type="AudioStreamPlayer" parent="Door/DoorSprite"]
stream = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="Door"]
collision_layer = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door/StaticBody2D"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Key/PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
